# OpenShadingLanguage

./: .gitignore  CMakeLists.txt  CMakePresets.json  Notes.md  TODO
sandbox/compile-ll-rt/: CMakeLists.txt  CMakePresets.json  main.cpp
sandbox/compile-ll-rt/cmake/: hip_macros.cmake
sandbox/compile-ll-rt/test-ll/: test.ll
src/cmake/: cuda_macros.cmake  externalpackages.cmake  hip_macros.cmake
src/include/: hip_compat.h
src/include/OSL/: device_ptr.h  dual.h  hashes.h  journal.h  llvm_util.h  oslclosure.h  oslconfig.h.in  oslexec.h  oslnoise.h  platform.h
src/liboslexec/: CMakeLists.txt  backendllvm.cpp  backendllvm.h  builtindecl.h  instance.cpp  llvm_gen.cpp  llvm_instance.cpp  llvm_ops.cpp  llvm_util.cpp  opcolor.cpp  opcolor.h  opcolor_impl.h  opmatrix.cpp  opnoise.cpp  optexture.cpp  oslexec_pvt.h  pointcloud.cpp  rs_fallback.cpp  runtimeoptimize.cpp  shadingsys.cpp
src/liboslnoise/: gabornoise.cpp  gabornoise.h
src/testshade/: optixgridrender.cpp  optixgridrender.h  simplerend.h  testshade.cpp
src/testshade-hip/: CMakeLists.txt  argparse.cpp  argparse.hpp  assert_hip.hpp  hiprenderer.cpp  hiprenderer.hpp  main.cpp  oslcompiler.cpp  oslcompiler.hpp  render_params.hpp  renderservices_strdecls.hpp  renderstate.hpp  simplerenderer.cpp  simplerenderer.hpp  utils.cpp  utils.hpp
src/testshade-hip-2/: CMakeLists.txt  optixgridrender.h  optixgridrender.hip.cpp  raytracer.h  render_params.hip.h  rs_simplerend.hip.cpp  testshade.cpp  testshade_dso.cpp
src/testshade-hip-2/cuda/: optix_grid_renderer.hip.cu  rend_lib.hip.cu  rend_lib.hip.h
src/testshade-hip/device/: hip_grid_renderer.hip.cpp  rend_lib.hip.cpp  rend_lib.hip.hpp
testsuite/example-cuda/: CMakeLists.txt  CMakePresets.json  cuda_grid_renderer.h  example-cuda.cpp  rend_lib.cu  rend_lib.h
testsuite/example-hip/: Assert.hpp  CMakeLists.txt  ClosureIDs.hpp  HipRenderer.cpp  HipRenderer.hip.cpp  HipRenderer.hpp  RenderLib.hip.cpp  RenderLib.hpp  main.cpp
testsuite/example-hip/cmake/: hip_macros.cmake
testsuite/example-hip/shader/: test_add.oso
